--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="">Entrar</a>
             </div>
             <div class="menuBotao">
-                <button>
+                <button onclick="abrirMenu()">
                     <span class="material-symbols-outlined">
                         menu
                     </span>
@@ -59,6 +59,8 @@
     <footer>
 
     </footer>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
+
