--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="menuBotao">
                 <button onclick="abrirMenu()">
-                    <span class="material-symbols-outlined">
+                    <span class="material-symbols-outlined" id="icone">
                         menu
                     </span>
                 </button>
@@ -42,7 +42,7 @@
             <ul>
                 <li class="itemMenu"><a href="index.html" class="linkItem">Home</a></li>
                 <li class="itemMenu"><a href="#" class="linkItem">Duchas</a></li>
-                <li class="itemMenu"><a href="#">Agendamentos</a></li>
+                <li class="itemMenu"><a href="#" class="linkItem">Agendamentos</a></li>
                 <li class="itemMenu"><a href="#" class="linkItem">Missão</a></li>
                 <li class="itemMenu"><a href="#" class="linkItem">Fotos da turma</a></li>
             </ul>
