--- a/javascript2.html
+++ b/javascript2.html
@@ -54,10 +54,10 @@
             <div class="row g-3">
                 <div class="col">
                     <label for="numero1" class="form-label">Número 1</label>
-                    <input type="text" class="form-control" placeholder="Número 1" aria-label="Número 1" id="numero1">
+                    <input type="text" class="form-control" placeholder="Número 1" aria-label="Número 1" id="numero1" name="numero1">
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" placeholder="Número 2" aria-label="Número 2" id="numero2">
+                    <input type="text" class="form-control" placeholder="Número 2" aria-label="Número 2" id="numero2" name="numero2">
                 </div>
                 <div class="col">
                     <label for="resultado" class="form-label">Resultado</label>
