--- a/javascript2.html
+++ b/javascript2.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="row mt-3">
-                <button type="button" class="btn btn-outline-success btn-lg" onclick="somarValores()">Large button</button>
+                <button type="button" class="btn btn-outline-success btn-lg" id="btnSomar">Large button</button>
             </div>
         </form>
     </main>
