--- a/pages/conf.html
+++ b/pages/conf.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
     <title>Confraternização</title>
 </head>
 
@@ -128,7 +128,7 @@
     </main>
 
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/conf.js"></script>
+    <script src="../js/conf.js"></script>
 </body>
 
 </html>
